# brief_20260601_RAG

./: .env.example  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
prompts/: CHANGELOG.md  loader.py  rag_system.txt  summary_system.txt
src/: __init__.py
src/application/: dtos.py
src/application/ports/: __init__.py  inbound.py  outbound.py
src/application/use_cases/: ingest_freshness.py  ingest_structured.py  query_assistant.py
src/domain/: entities.py  exceptions.py
src/infrastructure/adapters/: httpx_scraper.py  in_memory_signal_store.py  openai_assistant.py  pgvector_store.py
src/infrastructure/api/: main.py  schemas.py
src/infrastructure/api/controllers/: freshness_ingestion.py  structured_ingestion.py
src/infrastructure/cli/: main.py
src/infrastructure/config/: container.py  init_db.py  settings.py
src/infrastructure/console/: __init__.py
src/infrastructure/langchain/agents/: __init__.py  react_agent.py
src/infrastructure/langchain/callbacks/: __init__.py  tracing.py
src/infrastructure/langchain/chains/: __init__.py  rag_chain.py  summary_chain.py
src/infrastructure/langchain/memory/: __init__.py  conversation_buffer.py
src/infrastructure/langchain/retrievers/: __init__.py  vector_retriever.py
src/infrastructure/langchain/splitters/: __init__.py  text_splitter.py
tests/: conftest.py
tests/acceptance/: test_api_contracts.py
tests/unit/: test_ingest_freshness.py  test_ingest_structured.py  test_query_assistant.py  test_signal_store.py  test_text_splitter.py
(+2 files in other folders)
