[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "brief_20260601"
version = "0.1.0"
description = "LangChain RAG application"
requires-python = ">=3.11"
dependencies = []  # managed via requirements.txt

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

